--- a/qn9.html
+++ b/qn9.html
@@ -19,29 +19,28 @@
             text-align: center;
         }
 
-        /* Navigation menu styling */
+     
         nav ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
-            background-color: #d3d3d3; /* Light gray background */
+            background-color: #d3d3d3; 
             text-align: center;
         }
 
         nav ul li {
-            display: inline-block; /* Display items horizontally */
+            display: inline-block; 
             margin-right: 20px;
         }
 
         nav ul li a {
-            color: #333; /* Dark text color for contrast */
+            color: #333; 
             text-decoration: none;
             padding: 10px;
         }
 
         nav ul li a:hover {
-            background-color: #bbb; /* Hover effect for links */
-            color: white;
+            background-color: #bbb; 
         }
 
         section {
@@ -67,7 +66,7 @@
             background-color: #f2f2f2;
         }
 
-        /* Alternating row colors */
+        
         tr:nth-child(even) {
             background-color: #80c6d9;
         }
