--- a/qn3/qn3.html
+++ b/qn3/qn3.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farewell Message</title>
-    <link rel="stylesheet" href="./qn3.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
-    <h1>Farewell Message to ny best lecture</h1>
+    <h1>Farewell Message to my best lecture</h1>
 
     <p>Dear Madam Haddijjah</p>
 
     <p>
-        As you begin your journey abroad, I want to express my deepest gratitude for being an incredible lecturer. 
-        Your passion, dedication, and care have made a lasting impact on my life, and I feel truly fortunate to have 
+        As you begin your journey abroad, I want to express my deepest gratitude for being an incredible lecturer. <br>
+        Your passion, dedication, and care have made a lasting impact on my life, and I feel truly fortunate to have <br>
         been your student. You've inspired me to grow and made learning an enriching experience, and I will miss you dearly.
     </p>
 
     <p>
-        Please know that I will always remember the bond we shared and the lessons you’ve taught me. 
+        Please know that I will always remember the bond we shared and the lessons you’ve taught me. <br>
         I hope you find happiness and success in all that lies ahead, and I humbly ask that you never forget me.
     </p>
 
-    <p>With love and appreciation,<br>
-   namalwa millia</p>
+    <p>With love and appreciation,<br>namalwa millia</p>
+    <img src="./Solid_red_heart_love-removebg-preview.png" alt=" Love">
 
 </body>
 </html>
