--- a/qn7/qn7.html
+++ b/qn7/qn7.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Content in a Div</title>
-    <link rel="stylesheet" href="./qn7.css"> 
+    <link rel="stylesheet" href="./styles.css"> 
 <body>
 
     <div class="content-container">
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My section</h1>
         <p>This is a simple div element containing some content. You can add text, images, and other HTML elements here.</p>
-        <p>Feel free to explore and learn more about what I have to offer!</p>
+        <p>Feel free to learn more about what I have to offer!</p>
     </div>
 
 </body>
